# inslice

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml  release.yaml
src/: filter.rs
src/testdata/: input.txt
