[package]
name = "inslice"
version = "1.0.1"
authors = ["jace-ys <jaceys.tan@gmail.com>"]
edition = "2018"
description = "A command-line utility for filtering text input by columns and rows"
readme = "README.md"
homepage = "https://github.com/jace-ys/inslice"
repository = "https://github.com/jace-ys/inslice"
license = "MIT"
keywords = []
categories = ["command-line-utilities", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "colslc"
path = "src/bin/colslc/main.rs"

[[bin]]
name = "rowslc"
path = "src/bin/rowslc/main.rs"

[dependencies]
clap = "3.0.0-beta.5"
